# weap

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  tarpaulin-report.json
src/: lib.rs  main.rs
src/cmds/: b64.rs  base.rs  hash.rs  ip.rs  mod.rs  pw.rs  sys.rs  time.rs  uuid.rs
tests/: b64_test.rs  base_test.rs  cli_test.rs  hash_test.rs  ip_test.rs  pw_test.rs  sys_test.rs  time_test.rs  uuid_test.rs
