[package]
name = "weap"
version = "0.1.1"
description = "一个简单实用的命令行小工具"
authors = ["Art <weapon.artx@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/byteweap/weap"
homepage = "https://github.com/byteweap/weap"
documentation = "https://docs.rs/weap"
keywords = ["cli", "uuid", "password", "tools"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
rand = "0.8.5"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
